@@ -2,13 +2,14 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages. There is also a sg3_utils man page.
 
-Changelog for sg3_utils-1.34 [20120312] [svn: r444]
+Changelog for sg3_utils-1.34 [20120314] [svn: r445]
   - sg_verify: add 16 byte cdb, bytchk (data-out buffer)
     and group number support
-  - sync to spc4r34 and sbc3r30
+  - sync to spc4r35 and sbc3r30
   - sg_inq: add --export to experiment with udev
   - sg_ses: increase max dpage response size to 64 KB
   - sg_sanitize: add --ause, --fail and --test=
+  - sg_luns: add long extended flat space addressing format
   - sg_pt_linux: expand DID_ (host_byte) codes
   - sg_lib: fix sg_get_command_name() service actions
     - report sdat_ovfl bit (if set) in sense data
